--- a/src/index.css
+++ b/src/index.css
@@ -345,20 +345,19 @@
     position: absolute;
     width: 24px;
     height: 24px;
-    border-color: hsl(var(--primary) / 0.4);
     pointer-events: none;
   }
   .corner-brackets::before {
     top: -1px;
     left: -1px;
-    border-top: 2px solid;
-    border-left: 2px solid;
+    border-top: 2px solid hsl(var(--primary) / 0.4);
+    border-left: 2px solid hsl(var(--primary) / 0.4);
   }
   .corner-brackets::after {
     bottom: -1px;
     right: -1px;
-    border-bottom: 2px solid;
-    border-right: 2px solid;
+    border-bottom: 2px solid hsl(var(--primary) / 0.4);
+    border-right: 2px solid hsl(var(--primary) / 0.4);
   }
 
   /* ═══ SCANLINE OVERLAY ═══ */
